fix(ui): FileName - prevent long filenames from overflowing

--- a/packages/ui/src/ui/file-name/file-name.css
+++ b/packages/ui/src/ui/file-name/file-name.css
@@ -7,16 +7,3 @@
   hyphens: auto;
   white-space: normal;
 }
-
-.part::after {
-  content: '/';
-}
-
-.part:last-child::after {
-  content: '';
-}
-
-.noBreak {
-  white-space: nowrap;
-}
-
